Changed Gender.BOTH to Gender.OTHER

--- a/config/templates/default/DataTypes.properties
+++ b/config/templates/default/DataTypes.properties
@@ -16,10 +16,10 @@
 		"copyrightSelected", "otherSelected"
 
 		"noGenderChecked", "maleGenderChecked",
-		"femaleGenderChecked", "bothGenderChecked"
+		"femaleGenderChecked", "otherGenderChecked"
 
 		"noGenderSelected", "maleGenderSelected",
-		"femaleGenderSelected", "bothGenderSelected"
+		"femaleGenderSelected", "otherGenderSelected"
 
 
 		"englishLanguageChecked", "spanishLanguageChecked",
