--- a/config/templates/default/en/ModelConfig.properties
+++ b/config/templates/default/en/ModelConfig.properties
@@ -287,7 +287,7 @@ FlagReason#3 = Other reason
 Gender#0 = undefined
 Gender#1 = male
 Gender#2 = female
-Gender#3 = both
+Gender#3 = other
 
 Language#0 = English
 Language#1 = Spanish
