- Added collection of default keys to SysConfig - Moved setup from TellFriendTest to the new class HandlerTestSetup - Restructured DatabaseConnection: init() Method allows the definition of further information on how the connection has to be created - Added DataBaseSetup which uses an in-memory database

--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,7 @@
 	<classpathentry kind="lib" path="lib/org.mortbay.jetty.jar"/>
 	<classpathentry kind="lib" path="lib/org.mortbay.jmx.jar"/>
 	<classpathentry kind="lib" path="lib/postgresql-9.1-901.jdbc4.jar"/>
+	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="bin"/>
