Fixed user name issues.

--- a/web/config/templates/default/de/ModelConfig.properties
+++ b/web/config/templates/default/de/ModelConfig.properties
@@ -121,6 +121,7 @@ NeedToSignupFirst = Sie müssen sich <a href="signup.html">anmelden</a> und/oder 
 #
 
 UserAlreadyExists = Diesen Benutzer gibt es bereits!
+UserNameIsReserved = Dier Benutzername ist reserviert!
 PasswordsDontMatch = Passworte stimmen nicht überein!
 DidntCheckTerms = Sie müssen den Nutzungsbedingungen zustimmen!
 ConfirmationEmailWasSent = Wir haben Ihnen eine Email geschickt; bitte bestätigen Sie Ihren Account!
