--- a/web/config/templates/default/en/ModelConfig.properties
+++ b/web/config/templates/default/en/ModelConfig.properties
@@ -121,6 +121,7 @@ NeedToSignupFirst = You need to <a href="signup.html">signup</a> and/or <a href=
 #
 
 UserAlreadyExists = User already exists!
+UserNameIsReserved = User name is reserved!
 PasswordsDontMatch = Passwords don't match!
 DidntCheckTerms = You need to agree to the terms and conditions!
 ConfirmationEmailWasSent = An account confirmation email was sent; please respond to it!
