--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app id="WebApp_ID" version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
 	<listener>
-		<listener-class>org.wahlzeit.apps.GenericApp</listener-class>
+		<listener-class>org.wahlzeit.apps.Wahlzeit</listener-class>
 	</listener>
 
 	<servlet>
