--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'war'
 apply plugin: 'appengine'
 apply plugin: 'java'
 
-def gaeVersion = "1.9.21"
+def gaeVersion = "1.9.23"
 
 buildscript {
     repositories {
@@ -10,7 +10,18 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.google.appengine:gradle-appengine-plugin:1.9.21"
+        classpath "com.google.appengine:gradle-appengine-plugin:1.9.23"
+    }
+}
+
+gradle.taskGraph.whenReady {
+    // check if JAVA_HOME is set, otherwise build tasks will fail
+    graph ->
+    if (System.env.'JAVA_HOME' == null) {
+        throw new GradleException("JAVA_HOME not set!")
+    }
+    else {
+        println "JAVA_HOME = " + System.env.'JAVA_HOME'
     }
 }
 
