Fixed HTML mistakes; adjusted to dirkriehle-wahlzeit.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>showStaticStuff</servlet-name>
-		<url-pattern>/org-wahlzeit-data/*</url-pattern>
+		<url-pattern>/org-wahlzeit-dirkriehle/*</url-pattern>
 	</servlet-mapping>
 
 	<servlet>
