--- a/src/main/webapp/config/templates/default/de/ModelConfig.properties
+++ b/src/main/webapp/config/templates/default/de/ModelConfig.properties
@@ -28,7 +28,7 @@ PageMission = Dieser Webplatz zeigt, diskutiert, und lobt Fotos!
 # Page menu
 #
 
-MenuDash = &#8213
+MenuDash = &#8213;
 
 #
 # Page footer menu
