--- a/src/main/webapp/config/templates/default/en/ModelConfig.properties
+++ b/src/main/webapp/config/templates/default/en/ModelConfig.properties
@@ -28,7 +28,7 @@ PageMission = This website is to show the best in photos!
 # Page menu
 #
 
-MenuDash = &#8213
+MenuDash = &#8213;
 
 #
 # Page footer menu
