--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,11 +23,20 @@
 
 	<servlet>
 		<servlet-name>persistPhotos</servlet-name>
-		<servlet-class>org.wahlzeit.servlets.PersistPhotoAsynchronousServlet</servlet-class>
+		<servlet-class>org.wahlzeit.agents.PersistPhotoAgent</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>persistPhotos</servlet-name>
 		<url-pattern>/persistPhoto</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>agentManager</servlet-name>
+		<servlet-class>org.wahlzeit.servlets.AgentServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>agentManager</servlet-name>
+		<url-pattern>/agents/*</url-pattern>
 	</servlet-mapping>
 
 	<servlet>
@@ -93,7 +102,7 @@
 	<!--> Session config </!-->
 	<session-config>
         <!--> make sure to keep it synchronized with schedule of "Cleanup old sessions" cron job in cron.xml </!-->
-        <session-timeout>30</session-timeout>
+        <session-timeout>180</session-timeout>
 	</session-config>
 	<!--> Session config end </!-->
 </web-app>
