--- a/src/main/webapp/config/templates/default/de/ModelConfig.properties
+++ b/src/main/webapp/config/templates/default/de/ModelConfig.properties
@@ -14,6 +14,7 @@ LanguageCode = de
 #
 
 AuditEmailAddress = deutsch.audit@localhost
+AdministratorEmailAddressLocalPart = administrator
 
 #
 # Page slogans
