--- a/src/main/webapp/config/templates/default/en/ModelConfig.properties
+++ b/src/main/webapp/config/templates/default/en/ModelConfig.properties
@@ -14,6 +14,7 @@ LanguageCode = en
 #
 
 AuditEmailAddress = english.audit@localhost
+AdministratorEmailAddressLocalPart = administrator
 
 #
 # Page slogans
