Corrected the bug, that you get a notification for each photo that has been rated.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,6 +67,7 @@
 		<web-resource-collection>
 			<url-pattern>/_ah/sessioncleanup/*</url-pattern>
 			<url-pattern>/cron/*</url-pattern>
+			<url-pattern>/agents/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>admin</role-name>
