--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'appengine'
 
 buildscript {
     ext {
-        gaeVersion = '1.9.24'
+        gaeVersion = '1.9.26'
     }
     repositories {
         mavenCentral()
@@ -48,7 +48,9 @@ dependencies {
 }
 
 test {
-    // adjust this filter to your needs
+    filter {
+        includeTestsMatching "org.wahlzeit.*"
+    }
 }
 
 appengine {
