--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 buildscript {
     repositories {
         mavenCentral()
@@ -23,12 +22,11 @@ apply plugin: 'appengine'
 // check if JAVA_HOME is set, otherwise build tasks will fail
 gradle.taskGraph.whenReady {
     graph ->
-    if (System.env.'JAVA_HOME' == null) {
-        throw new GradleException("JAVA_HOME not set. Please set it, otherwise this task can not be executed.")
-    }
-    else {
-        println "JAVA_HOME = " + System.env.'JAVA_HOME'
-    }
+        if (System.env.'JAVA_HOME' == null) {
+            throw new GradleException("JAVA_HOME not set. Please set it, otherwise this task can not be executed.")
+        } else {
+            println "JAVA_HOME = " + System.env.'JAVA_HOME'
+        }
 }
 
 repositories {
@@ -38,7 +36,7 @@ repositories {
 dependencies {
     // https://cloud.google.com/appengine/docs/standard/java/release-notes
 
-    providedCompile group: 'javax.servlet', name: 'servlet-api', version:'2.5'
+    providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
     compile 'com.google.appengine:appengine:+'
 
     appengineSdk 'com.google.appengine:appengine-java-sdk:+'
@@ -60,7 +58,7 @@ dependencies {
 
 test {
     filter {
-        includeTestsMatching "org.wahlzeit.*"
+        includeTestsMatching "org.wahlzeit.WahlzeitTestSuite"
     }
 }
 
