activated logging in gradle's test execution so I can see the passed tests

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,14 @@ test {
     filter {
         includeTestsMatching "org.wahlzeit.WahlzeitTestSuite"
     }
+    testLogging {
+        exceptionFormat "full"
+        events "skipped", "passed", "failed"
+        showStandardStreams true
+    }
 }
+
+
 
 appengine {
     httpPort = 8080
