--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'appengine'
 
+wrapper {
+	gradleVersion = '4.10'
+}
+
 // check if JAVA_HOME is set, otherwise build tasks will fail
 gradle.taskGraph.whenReady {
     graph ->
