Add logging output for test task

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,17 @@ test {
     filter {
         includeTestsMatching "org.wahlzeit.*"
     }
+    testLogging {
+            events "passed", "skipped", "failed"
+
+            afterSuite { desc, result ->
+                if (!desc.parent) {
+                    println "Tests run: ${result.testCount}, " +
+                            "Failures: ${result.failedTestCount}, " +
+                            "Skipped: ${result.skippedTestCount}"
+                }
+            }
+        }
 }
 
 appengine {
