--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,6 @@ appengine {
     }
 }
 
-// Google App Engine Standard Environment supports Java 7 only (as from August 2016, https://cloud.google.com/appengine/docs)
-sourceCompatibility = 1.7 // Java version compatibility to use when compiling Java source.
-targetCompatibility = 1.7 // Java version to generate classes for.
+// Google App Engine Standard Environment supports Java 8 only (as from September 2018, https://cloud.google.com/appengine/docs)
+sourceCompatibility = JavaVersion.VERSION_1_8 // Java version compatibility to use when compiling Java source.
+targetCompatibility = JavaVersion.VERSION_1_8 // Java version to generate classes for.
