Deploy stage implemented for master (latest tag)

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ jobs:
     - stage: build
       script: docker build -t wahlzeit .
     - stage: deploy
-      script: echo 'deploy stage stub'
+      script: docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PW
+      script: docker push $DOCKERHUB_USER/wahlzeit
