Change name of docker image to match with DockerHub registry

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 jobs:
   include: 
     - stage: build
-      script: docker build -t wahlzeit .
+      script: docker build -t $DOCKERHUB_USER/wahlzeit .
     - stage: deploy
       script: docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PW
       script: docker push $DOCKERHUB_USER/wahlzeit
