--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 language: bash
 
-stages:
-  - build
-  - name: publish
-#    if: branch = master
-
 services:
   - docker
 
-jobs:
-  include: 
-    - stage: build
-      script: docker build -t ${DOCKERHUB_USER}/wahlzeit .
-    - stage: publish
-      script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW}
-      script: docker push ${DOCKERHUB_USER}/wahlzeit
+deploy:
+  provider: script
+  script: docker build -t ${DOCKERHUB_USER}/wahlzeit .
+  script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW}
+  script: docker push ${DOCKERHUB_USER}/wahlzeit
+  on:
+    branch: master
