Combine build and publish because Travis is not capable to share docker image between stages

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ language: bash
 services:
   - docker
 
+before_script:
+  - docker build -t ${DOCKERHUB_USER}/wahlzeit .
+
 deploy:
   provider: script
-  script: docker build -t ${DOCKERHUB_USER}/wahlzeit .
-  script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW}
-  script: docker push ${DOCKERHUB_USER}/wahlzeit
+  script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW} && docker push ${DOCKERHUB_USER}/wahlzeit
   # on:
   #   branch: master
