--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
 deploy:
   provider: script
   script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW} && docker push ${DOCKERHUB_USER}/wahlzeit
-  # on:
-  #   branch: master
+  on:
+    branch: travis-ci
