--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,22 @@ services:
 
 env:
   - IMAGE_NAME=${DOCKERHUB_USER}/wahlzeit
-  - IMAGE_NAME_TAGGED=${IMAGE_NAME}:${TRAVIS_TAG}
+  - IMAGE_NAME_TAGGED=${DOCKERHUB_USER}/wahlzeit:${TRAVIS_TAG}
+
+script:
+  - docker build -t ${IMAGE_NAME} .
 
 before_deploy:
   - docker build -t ${IMAGE_NAME} .
 
 deploy:
   - provider: script
-    script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW} && docker push ${IMAGE_NAME}
+    script: 
+      docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW} && docker push ${IMAGE_NAME}
     on:
       branch: travis-ci
   
   - provider: script
-    script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW} && docker tag ${IMAGE_NAME} ${IMAGE_NAME_TAGGED} && docker push ${IMAGE_NAME_TAGGED}/
+    script: docker login -u ${DOCKERHUB_USER} -p ${DOCKERHUB_PW} && docker tag ${IMAGE_NAME} ${IMAGE_NAME_TAGGED} && docker push ${IMAGE_NAME_TAGGED}
     on:
       tags: true
