--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ services:
   - docker
 
 env:
-  - IMAGE_NAME=${DOCKERHUB_USER}/wahlzeit
-  - IMAGE_NAME_TAGGED=${DOCKERHUB_USER}/wahlzeit:${TRAVIS_TAG}
+  global:
+    - IMAGE_NAME=${DOCKERHUB_USER}/wahlzeit
+    - IMAGE_NAME_TAGGED=${DOCKERHUB_USER}/wahlzeit:${TRAVIS_TAG}
 
 before_deploy:
   - docker build -t ${IMAGE_NAME} .
