--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ env:
     - IMAGE_NAME=${DOCKERHUB_USER}/wahlzeit
     - IMAGE_NAME_TAGGED=${DOCKERHUB_USER}/wahlzeit:${TRAVIS_TAG}
 
-before_deploy:
+script:
   - docker build -t ${IMAGE_NAME} .
+
+# before_deploy:
+#   - docker build -t ${IMAGE_NAME} .
 
 deploy:
   - provider: script
