--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3.7'
 
 services:
-
-  wahlzeit-db:
+  db:
     image: postgres:12-alpine
     environment:
       POSTGRES_DB: wahlzeit
@@ -13,3 +12,8 @@ services:
   # Uncomment for persistence independent of container
   # volumes:
   #   - "./pgdata:/var/lib/postgresql/data"
+  adminer:
+    image: adminer
+    restart: "no"
+    ports:
+      - 8090:8080
