Add logging output for test task

--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,20 @@ gradle.taskGraph.whenReady {
         println "JAVA_HOME = " + System.env.'JAVA_HOME'
     }
 }
+
+test {
+    filter {
+        includeTestsMatching "org.wahlzeit.*"
+    }
+    testLogging {
+            events "passed", "skipped", "failed"
+
+            afterSuite { desc, result ->
+                if (!desc.parent) {
+                    println "Tests run: ${result.testCount}, " +
+                            "Failures: ${result.failedTestCount}, " +
+                            "Skipped: ${result.skippedTestCount}"
+                }
+            }
+        }
+}
