--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.7'
 
 services:
+  app: 
+    image: wahlzeit
+    build:
+      context: .
+    environment: 
+      WAHLZEIT_DB_HOST: "db"
+    ports: 
+      - 8080:8080
   db:
     image: postgres:12-alpine
     environment:
