--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'war'
     id 'org.gretty' version '3.0.3'  
     id 'java'
+    id 'application'
 }
 
 repositories {
@@ -26,8 +27,17 @@ dependencies {
     implementation 'org.postgresql:postgresql:9.3-1104-jdbc41'    
     implementation 'log4j:log4j:1.2.17'
     implementation 'com.sun.mail:javax.mail:1.6.2'
-    
+
+    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '3.0.0'
+    implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.0'
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-jaxb', version: '3.0.0'
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-binding', version: '3.0.0'
+
     testImplementation 'junit:junit:4.12'
+}
+
+application {
+    mainClass = "org.wahlzeit_revisited.Wahlzeit"
 }
 
 test {
