--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.0.9",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
