Fixed WADL warning

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'war'
-    id 'org.gretty' version '3.0.3'  
+    id 'org.gretty' version '3.0.3'
     id 'java'
     id 'application'
 }
@@ -22,9 +22,9 @@ sourceSets {
 }
 
 dependencies {
-    providedCompile 'javax.servlet:javax.servlet-api:4.0.1' 
-    
-    implementation 'org.postgresql:postgresql:9.3-1104-jdbc41'    
+    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
+
+    implementation 'org.postgresql:postgresql:9.3-1104-jdbc41'
     implementation 'log4j:log4j:1.2.17'
     implementation 'com.sun.mail:javax.mail:1.6.2'
 
@@ -32,6 +32,7 @@ dependencies {
     implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.0'
     implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-jaxb', version: '3.0.0'
     implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-binding', version: '3.0.0'
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.0'
 
     testImplementation 'junit:junit:4.12'
 }
@@ -45,14 +46,14 @@ test {
         includeTestsMatching "org.wahlzeit.*"
     }
     testLogging {
-            events "passed", "skipped", "failed"
+        events "passed", "skipped", "failed"
 
-            afterSuite { desc, result ->
-                if (!desc.parent) {
-                    println "Tests run: ${result.testCount}, " +
-                            "Failures: ${result.failedTestCount}, " +
-                            "Skipped: ${result.skippedTestCount}"
-                }
+        afterSuite { desc, result ->
+            if (!desc.parent) {
+                println "Tests run: ${result.testCount}, " +
+                        "Failures: ${result.failedTestCount}, " +
+                        "Skipped: ${result.skippedTestCount}"
             }
         }
+    }
 }
