Better AccessRight handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
         "**/.project": true,
         "**/.settings": true,
         "**/.factorypath": true
+    },
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#501D1A",
+        "titleBar.activeBackground": "#702924",
+        "titleBar.activeForeground": "#FEFCFC"
     }
 }
