IT-Test run inside the pipeline

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -6,6 +6,18 @@ jobs:
   test-and-build:
     name: Test and Build
     runs-on: ubuntu-latest
+
+    services:
+      db:
+        image: postgres:12-alpine
+        env:
+          POSTGRES_DB: wahlzeit
+          POSTGRES_USER: wahlzeit
+          POSTGRES_PASSWORD: wahlzeit
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - name: Setup Java 11
         uses: actions/setup-java@v1
