--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,24 @@ application {
 
 test {
     filter {
-        includeTestsMatching "org.wahlzeit_revisited.*"
+        includeTestsMatching "org.wahlzeit_revisited.*Test"
+    }
+    testLogging {
+        events "passed", "skipped", "failed"
+
+        afterSuite { desc, result ->
+            if (!desc.parent) {
+                println "Tests run: ${result.testCount}, " +
+                        "Failures: ${result.failedTestCount}, " +
+                        "Skipped: ${result.skippedTestCount}"
+            }
+        }
+    }
+}
+
+task testIT(type: Test) {
+    filter {
+        includeTestsMatching "org.wahlzeit_revisited.*IT"
     }
     testLogging {
         events "passed", "skipped", "failed"
