--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-    id 'war'
-    id 'org.gretty' version '3.0.3'
     id 'java'
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
 repositories {
@@ -22,8 +21,6 @@ sourceSets {
 }
 
 dependencies {
-    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
-
     implementation 'org.postgresql:postgresql:9.3-1104-jdbc41'
     implementation 'log4j:log4j:1.2.17'
     implementation 'com.sun.mail:javax.mail:1.6.2'
@@ -39,6 +36,10 @@ dependencies {
 
 application {
     mainClass = "org.wahlzeit_revisited.Wahlzeit"
+}
+
+shadowJar {
+    mainClassName = "org.wahlzeit_revisited.Wahlzeit"
 }
 
 test {
