--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-    id 'war'
-    id 'org.gretty' version '3.0.3'
     id 'java'
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
 repositories {
@@ -22,23 +21,25 @@ sourceSets {
 }
 
 dependencies {
-    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
-
     implementation 'org.postgresql:postgresql:9.3-1104-jdbc41'
     implementation 'log4j:log4j:1.2.17'
     implementation 'com.sun.mail:javax.mail:1.6.2'
 
-    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '3.0.0'
-    implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.0'
-    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-jaxb', version: '3.0.0'
-    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-binding', version: '3.0.0'
-    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.0'
+    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: '3.0.2'
+    implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.2'
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.2'
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-binding', version: '3.0.2'
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.1'
 
     testImplementation 'junit:junit:4.12'
 }
 
 application {
     mainClass = "org.wahlzeit_revisited.Wahlzeit"
+}
+
+shadowJar {
+    mainClassName = "org.wahlzeit_revisited.Wahlzeit"
 }
 
 test {
