--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,6 @@
 version: '3.7'
 
 services:
-  app: 
-    image: wahlzeit
-    build:
-      context: .
-    environment: 
-      WAHLZEIT_DB_HOST: "db"
-    ports: 
-      - 8080:8080
   db:
     image: postgres:12-alpine
     environment:
@@ -17,11 +9,42 @@ services:
       POSTGRES_PASSWORD: wahlzeit
     ports:
       - 5432:5432
-  # Uncomment for persistence independent of container
-  # volumes:
-  #   - "./pgdata:/var/lib/postgresql/data"
+    networks:
+      - backend
+    # Uncomment for persistence independent of container
+    # volumes:
+    #   - "./pgdata:/var/lib/postgresql/data"
+
   adminer:
     image: adminer
     restart: "no"
     ports:
       - 8090:8080
+
+  backend:
+    image: wahlzeit
+    build:
+      context: .
+    environment:
+      WAHLZEIT_DB_HOST: "db"
+    ports:
+      - 8081:8080
+    networks:
+      - backend
+
+  frontend:
+    restart: always
+    image: nginx:1.17.1-alpine
+    volumes:
+      - ./nginx:/etc/nginx/conf.d
+      # - ./pathToVue:/usr/share/nginx/html
+    ports:
+      - 8080:80
+    networks:
+      - backend
+    depends_on:
+      - backend
+
+networks:
+  backend:
+    driver: bridge
