--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,5 @@
 server {
   listen 80;
-  server_name localhost;
 
   root /usr/share/nginx/html;
 
@@ -16,7 +15,7 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_read_timeout 86400;
-    proxy_pass         http://backend:8080/;
+    proxy_pass         http://backend:8080/api/;
   }
 
 }
