--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:4.0.1' 
     
     implementation 'org.postgresql:postgresql:9.3-1104-jdbc41'    
-    implementation 'log4j:log4j:1.2.17'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.0'
     implementation 'com.sun.mail:javax.mail:1.6.2'
     
     testImplementation 'junit:junit:4.12'
